--- a/src/features/MerchantDetail/components/OrgMap/orgMap.css
+++ b/src/features/MerchantDetail/components/OrgMap/orgMap.css
@@ -24,40 +24,43 @@
     object-fit: cover;
 }
 .dialog-map__org .dialog-map__list {
-    position: absolute;
-    left: 0;
-    top: 0;
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 100%;
     height: 100%;
+    overflow-y: scroll;
     background-color: var(--bgWhite);
-    margin-left: -100%;
-    transition: all 0.3s ease-in;
     z-index: 4;
     border-right: 1px solid #ccc;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
+.dialog-map__org .dialog-map__list::-webkit-scrollbar {
+    width: 2px;
+    display: block;
+}
+.dialog-map__org .dialog-map__list::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+}
 
 .list-org__active {
     margin-left: 0 !important;
-    transition: all 0.3s ease-out !important;
+    transition: all 0.2s ease-in !important;
 }
 .dialog-map__org .dialog-map__item {
     display: flex;
     background-color: var(--bgWhite);
-    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
-    /* border-radius: 16px; */
+    flex-shrink: 0;
     overflow: hidden;
     grid-gap: 0 16px;
     padding: 16px;
     align-items: center;
     cursor: pointer;
     transition: all 0.2s ease-out;
+    user-select: none;
 }
 .dialog-map__org .dialog-map__item:hover {
-    background-color: var(--bgGray);
-    transition: all 0.2s ease-in;
+    background-color: var(--bgGray) !important;
+    transition: all 0.2s ease-out;
 }
 .dialog-map__org .dialog-map__item:not(:last-child) {
     border-bottom: 1px solid rgba(204, 204, 204, 0.539);
@@ -126,6 +129,16 @@
     font-size: 14px;
     font-weight: bold;
 }
+.dialog-map__wrapper {
+    position: absolute;
+    z-index: 2;
+    height: 100%;
+    width: 25%;
+    top: 0;
+    left: 0;
+    margin-left: -25%;
+    transition: all 0.3s ease-in !important;
+}
 .dialog-map__org .open-list__org {
     z-index: 6;
     position: absolute;
@@ -140,7 +153,7 @@
 }
 .dialog-map__org .open-list__org.open {
     left: 0;
-    z-index: 3;
+    z-index: 6;
 }
 .dialog-map__org .open-list__org.close {
     z-index: 6;
@@ -183,7 +196,7 @@
         width: 100vw;
         height: 100vh;
     }
-    .dialog-map__org .dialog-map__list {
+    .dialog-map__org .dialog-map__wrapper {
         display: none;
     }
     .dialog-map__org .open-list__org {
