--- a/src/features/ReviewsContainer/style.css
+++ b/src/features/ReviewsContainer/style.css
@@ -11,7 +11,25 @@
 @media only screen and (max-width: 1023px) {
     .all-review-cnt {
         width: 100vw;
-        height: calc(100vh - 54px);
+        height: 100%;
+        max-height: 80vh;
         padding: 12px;
+        margin-bottom: 64px;
+    }
+    .all-review-cnt .evaluate-input__change {
+        width: 100%;
+        padding: 12px 8px 24px 8px;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    }
+    .all-review-cnt .input-btn {
+        top: 16px;
+        transform: unset;
+        right: 24px;
+    }
+    .all-review-cnt .evaluate__list {
+        padding-bottom: 92px;
+    }
+    .all-review-cnt .evaluate-comment {
+        padding: 16px 0;
     }
 }
