--- a/src/features/poupSignInUp/popupSignInUp.css
+++ b/src/features/poupSignInUp/popupSignInUp.css
@@ -1,410 +1,414 @@
 .m-0 {
-  margin: 0;
+    margin: 0;
 }
 .mb-tb-8px {
-  margin-bottom: 16px;
+    margin-bottom: 16px;
 }
 .mt-16 {
-  margin-top: 16px;
+    margin-top: 16px;
 }
 .mt-48 {
-  margin-top: 48px;
+    margin-top: 48px;
 }
 .mt-38 {
-  margin-top: 38px;
+    margin-top: 38px;
 }
 .w-100 {
-  width: 100%;
+    width: 100%;
 }
 .relative {
-  position: relative;
+    position: relative;
 }
 .MuiFormControl-root {
-  width: 100%;
+    width: 100%;
 }
 .MuiFormControlLabel-root {
-  margin: 0 !important;
-  padding: 0 !important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 .MuiFormGroup-root {
-  flex-wrap: nowrap !important;
+    flex-wrap: nowrap !important;
 }
 .MuiFormControlLabel-label {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
 }
 .MuiPaper-root {
-  max-width: max-content !important;
+    max-width: max-content !important;
 }
 
 .sign-content {
-  padding: 36px;
-  background-color: var(--bg-color);
-  gap: 0 36px;
-  width: 1020px;
-  height: 90vh;
+    padding: 36px;
+    background-color: var(--bg-color);
+    gap: 0 36px;
+    width: 1020px;
+    height: 90vh;
 }
 .sign-content .date-of-birth {
-  display: flex;
-  align-items: center;
-  gap: 0 16px;
-  width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 0 16px;
+    width: 100%;
 }
 .sign-content .drop-category {
-  bottom: -150px;
-  left: 0;
+    bottom: -150px;
+    left: 0;
 }
 
 .sign-content .drop-category ul li {
-  text-align: center;
+    text-align: center;
 }
 .sign-content__left-logo-mb {
-  display: none;
+    display: none;
 }
 .sign-content__left {
-  width: 45%;
+    grid-gap: 24px 0;
+    width: 45%;
 }
 .sign-content__left-partner {
-  width: 100%;
+    width: 100%;
 }
 .sign-content__left-title {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
-  color: var(--purple);
-  padding: 24px 0;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    color: var(--purple);
+    padding: 24px 0;
 }
 .sign-content__right {
-  width: 55%;
-  background-color: var(--bg-gray);
-  border-radius: 24px;
-  box-shadow: 0px 6px 15px #dcd8ee;
-  padding: 36px;
-  height: 100%;
-  overflow-y: scroll;
+    width: 55%;
+    background-color: var(--bg-gray);
+    border-radius: 24px;
+    box-shadow: 0px 6px 15px #dcd8ee;
+    padding: 36px;
+    height: 100%;
+    overflow-y: scroll;
 }
 .sign-content__right-tab {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .sign-content__right-tab button {
-  font-size: 20px;
-  line-height: 24px;
-  font-weight: 700;
-  color: var(--text-hover);
-  padding-bottom: 6px;
-  border: none;
-  outline: none;
-  background-color: transparent;
-  margin: 0px 12px;
-  transition: 0.4s;
-  cursor: pointer;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 700;
+    color: var(--text-hover);
+    padding-bottom: 6px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    margin: 0px 12px;
+    transition: 0.4s;
+    cursor: pointer;
 }
 .signIn-checkbox {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: space-between;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
 }
 .signIn-checkbox span {
-  font-size: 12px;
-  line-height: 12px;
-  color: var(--purple);
-  font-weight: 500;
-  cursor: pointer;
+    font-size: 14px;
+    line-height: 12px;
+    color: var(--purple);
+    font-weight: 500;
+    cursor: pointer;
 }
 .signIn-checkbox__wrap {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 .signIn-checkbox__wrap span {
-  display: flex;
-  align-items: center;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 12px;
-  color: var(--text-black);
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 12px;
+    color: var(--text-black);
 }
 .sign-form {
-  position: relative;
-  width: 100%;
-  margin-top: 24px;
+    position: relative;
+    width: 100%;
+    margin: 24px 0;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 16px 0;
 }
 .sign-form__box {
-  position: relative;
+    position: relative;
 }
 .sign-form__box-icon {
-  position: absolute;
-  left: 16px;
-  top: 50%;
-  transform: translateY(-50%);
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 .sign-form__box {
-  width: 100%;
+    width: 100%;
 }
 .sign-form__box input {
-  border: none;
-  outline: none;
-  width: 100%;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  /* color: var(--purple); */
-  color: var(--text-hover);
-  padding: 8px 24px 8px 44px;
-  border-radius: 18px;
-  background-color: var(--bg-gray) !important;
-  box-shadow: inset 0px 2px 6px rgba(113, 97, 186, 0.2);
+    border: none;
+    outline: none;
+    width: 100%;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    /* color: var(--purple); */
+    color: var(--text-hover);
+    padding: 8px 24px 8px 44px;
+    border-radius: 18px;
+    background-color: var(--bg-gray) !important;
+    box-shadow: inset 0px 2px 6px rgba(113, 97, 186, 0.2);
 }
 
 /* cus calendar date of birth */
 .sign-content .MuiInputBase-input {
-  padding: 8px 16px 8px 44px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  color: grey;
+    padding: 8px 16px 8px 44px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: grey;
 }
 .sign-content .MuiIconButton-root {
-  margin-right: -8px;
+    margin-right: -8px;
 }
 .sign-content .MuiOutlinedInput-root {
-  box-shadow: inset 0px 2px 6px rgb(113 97 186 / 20%);
-  border-radius: 18px;
-  overflow: hidden;
-  width: 100%;
+    box-shadow: inset 0px 2px 6px rgb(113 97 186 / 20%);
+    border-radius: 18px;
+    overflow: hidden;
+    width: 100%;
 }
 .sign-content .MuiOutlinedInput-notchedOutline {
-  border: 0;
+    border: 0;
 }
 .sign-content .MuiSvgIcon-root {
-  color: var(--purple);
+    color: var(--purple);
 }
 .sign-form__box-icon-show {
-  position: absolute;
-  right: 16px;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
 }
 .sign-btn {
-  font-size: 20px;
-  line-height: 24px;
-  color: var(--bg-gray);
-  outline: none;
-  border: none;
-  padding: 10px 16px;
-  background-color: var(--purple);
-  border-radius: 22px;
+    font-size: 20px;
+    line-height: 24px;
+    color: var(--bg-gray);
+    outline: none;
+    border: none;
+    padding: 10px 16px;
+    background-color: var(--purple);
+    border-radius: 22px;
 }
 .sign-loading {
-  width: 66%;
-  position: absolute;
-  z-index: 2;
-  display: flex;
-  justify-content: center;
+    width: 66%;
+    position: absolute;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
 }
 
 .sign-or {
-  margin-top: 32px;
-  text-align: center;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  color: var(--text-hover);
+    margin-top: 32px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--text-hover);
 }
 .sign-other-social {
-  width: 100%;
-  justify-content: center;
-  margin: 16px 0px;
+    width: 100%;
+    justify-content: center;
+    margin: 16px 0px;
 }
 .sign-other-social img {
-  margin: 0px 8px;
-  cursor: pointer;
+    margin: 0px 8px;
+    cursor: pointer;
 }
 .sign-other-setup {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 20px;
-  color: var(--text-hover);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--text-hover);
 }
 .sign-other-setup span {
-  margin-left: 4px;
-  cursor: pointer;
-  font-weight: 700;
-  color: var(--purple);
+    margin-left: 4px;
+    cursor: pointer;
+    font-weight: 700;
+    color: var(--purple);
 }
 
 .dialog-forgot__password {
-  padding: 36px;
-  background-color: var(--bg-gray);
-  border-radius: 24px;
-  width: 400px;
+    padding: 36px;
+    background-color: var(--bg-gray);
+    border-radius: 24px;
+    width: 400px;
 }
 .dialog-forgot__password .errText {
-  margin: unset;
-  margin-top: 6px;
+    margin: unset;
+    margin-top: 6px;
 }
 .dialog-forgot__password h2 {
-  /* padding: 36px; */
-  font-weight: bold;
-  font-size: 32px;
-  line-height: 36px;
-  color: var(--purple);
-  text-align: center;
-  padding-bottom: 8px;
+    /* padding: 36px; */
+    font-weight: bold;
+    font-size: 32px;
+    line-height: 36px;
+    color: var(--purple);
+    text-align: center;
+    padding-bottom: 8px;
 }
 .dialog-forgot__password-desc {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  color: var(--text-black);
-  padding-bottom: 32px;
-  text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--text-black);
+    padding-bottom: 32px;
+    text-align: center;
 }
 .dialog-forgot__password-btn {
-  display: flex;
-  justify-content: center;
-  gap: 0 16px;
-  padding-top: 32px;
+    display: flex;
+    justify-content: center;
+    gap: 0 16px;
+    padding-top: 32px;
 }
 .input-Verification {
-  padding: unset !important;
-  padding: 8px 0 !important;
-  text-align: center;
-  letter-spacing: 2px;
-  font: large Verdana, sans-serif;
+    padding: unset !important;
+    padding: 8px 0 !important;
+    text-align: center;
+    letter-spacing: 2px;
+    font: large Verdana, sans-serif;
 }
 .dialog-forgot__password .err-text {
-  margin: 0 0 0 20px;
+    margin: 0 0 0 20px;
 }
 .err-text {
-  margin: 0 0 0 38px;
-  font-size: 12px;
-  font-weight: 700;
-  color: var(--red-cl);
-  width: 100%;
+    margin: 0 0 0 38px;
+    font-size: 12px;
+    font-weight: 700;
+    color: var(--red-cl);
+    width: 100%;
 }
 /* sign page */
 .page-sign {
-  background-color: var(--bg-color);
+    background-color: var(--bg-color);
 }
 .page-sign__cnt {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 .sign-up-noti {
-  background-color: var(--bg-gray);
-  padding: 36px;
+    background-color: var(--bg-gray);
+    padding: 36px;
 }
 .page-sign .MuiContainer-root {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .sign-up-noti__check {
-  width: 48px;
-  height: 48px;
+    width: 48px;
+    height: 48px;
 }
 .sign-up-noti span {
-  margin: 8px 0px;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  color: var(--purple);
+    margin: 8px 0px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    color: var(--purple);
 }
 .sign-content .MuiOutlinedInput-notchedOutline {
-  border: 0;
+    border: 0;
 }
 .sign-content .MuiSvgIcon-root {
-  color: var(--purple);
+    color: var(--purple);
 }
 /* Tablet */
 @media (max-width: 768px), (max-width: 1024px) {
-  .dialog-forgot__password .err-text {
-    margin: 0;
-  }
-  .sign-content {
-    padding: 0px;
-    width: 100%;
-    height: max-content;
-  }
-  .sign-content__left {
-    display: none;
-  }
-  .sign-content__right {
-    width: 500px;
-    margin: 0 auto;
-  }
+    .dialog-forgot__password .err-text {
+        margin: 0;
+    }
+    .sign-content {
+        padding: 0px;
+        width: 100%;
+        height: max-content;
+    }
+    .sign-content__left {
+        display: none;
+    }
+    .sign-content__right {
+        width: 500px;
+        margin: 0 auto;
+    }
 }
 .sign-form__box-otp__ch,
-.sign-form__box-otp-right span:nth-child(2){
-  font-size: 12px;
-  line-height: 20px;
-  font-weight: 700;
-  color: var(--purple);
-  cursor: pointer;
+.sign-form__box-otp-right span:nth-child(2) {
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 700;
+    color: var(--purple);
+    cursor: pointer;
 }
-.sign-up-ip-otp{
-  width: 100%;
+.sign-up-ip-otp {
+    width: 100%;
 }
-.sign-form__box-otp{
-  width: 41.5%;
+.sign-form__box-otp {
+    width: 41.5%;
 }
-.sign-form__box-otp-right{
-  width: 58.1%;
-  padding-left: 6px;
+.sign-form__box-otp-right {
+    width: 58.1%;
+    padding-left: 6px;
 }
 /* res-mobile */
 /* Mobile */
 @media only screen and (max-width: 767px) {
-  .MuiPaper-root {
-    max-width: unset !important;
-    margin: 24px;
-  }
+    .MuiPaper-root {
+        max-width: unset !important;
+        margin: 24px;
+    }
 
-  .page-sign {
-    background-color: var(--bgWhite);
-    padding-top: 48px;
-  }
-  .page-sign__cnt {
-    flex-direction: column;
-    justify-content: start;
-    height: 100%;
-    background-color: var(--bgWhite);
-  }
-  .sign-content__left-logo-mb {
-    display: block;
-    width: 90px;
-    height: 80px;
-    margin-bottom: 8;
-  }
-  .sign-content__left {
-    display: none;
-  }
-  .sign-content__right {
-    width: 100%;
-    height: 100%;
-    padding: 24px;
-    border-radius: 0px;
-    box-shadow: none;
-  }
-  .sign-content {
-    width: 100%;
-    height: 100%;
-  }
-  .sign-input-name {
-    flex-direction: column;
-  }
-  .dialog-forgot__password {
-    width: unset;
-  }
-  .err-text {
-    margin: 0;
-  }
+    .page-sign {
+        background-color: var(--bgWhite);
+        padding-top: 48px;
+    }
+    .page-sign__cnt {
+        flex-direction: column;
+        justify-content: start;
+        height: 100%;
+        background-color: var(--bgWhite);
+    }
+    .sign-content__left-logo-mb {
+        display: block;
+        width: 90px;
+        height: 80px;
+        margin-bottom: 8;
+    }
+    .sign-content__left {
+        display: none;
+    }
+    .sign-content__right {
+        width: 100%;
+        height: 100%;
+        padding: 24px;
+        border-radius: 0px;
+        box-shadow: none;
+    }
+    .sign-content {
+        width: 100%;
+        height: 100%;
+    }
+    .sign-input-name {
+        flex-direction: column;
+    }
+    .dialog-forgot__password {
+        width: unset;
+    }
+    .err-text {
+        margin: 0;
+    }
 }
