--- a/src/features/MerchantDetail/style.css
+++ b/src/features/MerchantDetail/style.css
@@ -190,6 +190,7 @@
     display: flex;
     grid-gap: 0 8px;
     align-items: center;
+    flex-direction: column;
 }
 
 .org-detail__cnt-bot .org-avatar img {
@@ -886,6 +887,9 @@
     .mb-cnt {
         z-index: 1;
     }
+    .org-detail__cnt-bot .org-detail__info {
+        grid-gap: 12px 0;
+    }
     .org-information__map-cnt .map-org__seemore {
         top: 12px;
         right: 12px;
@@ -932,7 +936,7 @@
 
     .org-detail__cnt-bot {
         background-color: var(--bgWhite);
-        padding: 16px 8px;
+        padding: 12px 12px;
         border-radius: 8px;
         box-shadow: 0px 4px 6px rgb(0 0 0 / 10%);
         z-index: 10;
@@ -944,9 +948,14 @@
     }
 
     .org-detail__cnt-bot .org-avatar {
-        width: 48px;
-        height: 48px;
+        width: 60px;
+        height: 60px;
         border: none;
+    }
+    .org-detail__cnt-bot .org-avatar img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .org-detail__cnt-bot .org-left-detail {
@@ -964,10 +973,22 @@
         line-height: 14px;
         font-weight: 500;
     }
+    .mb-cnt .org-left-detail__address span {
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
+    }
 
     .org-time-work {
         width: 100%;
         margin: 0px;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 12px;
+        border-top: 1px solid #ccc;
     }
 
     .org-time-work .title,
