--- a/src/features/Footer/footer.css
+++ b/src/features/Footer/footer.css
@@ -1,64 +1,117 @@
-.footer{
-      width: 100%;
-      background-color: var(--purple);
-      padding-bottom: 42px;
+.footer {
+    width: 100%;
+    background-color: var(--purple);
+    padding-bottom: 42px;
 }
-.footer-cnt{
-      width: 100%;
-      padding: 42px 0px;
-      display: flex;
-      flex-direction: row;
+.footer-cnt {
+    display: flex;
 }
-.footer-cnt .wrap{
-      width: 25%;
-      padding: 0px 10px;
+.footer-cnt .footer-left {
+    width: 50%;
+    padding: 42px 0px;
+    display: flex;
+    flex-direction: row;
 }
-.footer-cnt__item-title{
-      font-size: 24px;
-      line-height: 28px;
-      color: var(--bgWhite);
-      font-weight: 700;
+.footer-cnt .wrap {
+    width: 100%;
+    padding: 0px 10px;
 }
-.footer-cnt__item ul{
-      margin-top: 18px;
+.footer-cnt__item-title {
+    font-size: 20px;
+    line-height: 28px;
+    color: var(--bgWhite);
+    font-weight: 700;
 }
-.footer-cnt__item ul li{
-      color: var(--bgWhite);
-      cursor: pointer;
-      margin: 4px 0px;
-      font-size: 16px;
-      line-height: 20px;
-      font-weight: 500;
+.footer-cnt__item ul {
+    margin-top: 18px;
 }
-.footer .address{
-      text-align: center;
-      margin-top: 32px;
-      font-size: 10px;
-      line-height: 14px;
-      color: var(--bgWhite);
-      cursor: pointer;
+.footer-cnt__item ul li {
+    color: var(--bgWhite);
+    cursor: pointer;
+    margin: 4px 0px;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 500;
 }
+.footer .address {
+    text-align: center;
+    margin-top: 32px;
+    font-size: 10px;
+    line-height: 14px;
+    color: var(--bgWhite);
+    cursor: pointer;
+}
+.footer .footer-right {
+    width: 50%;
+    padding: 42px 0px;
+    display: flex;
+    flex-direction: row;
+}
+.footer .social-list {
+    display: flex;
+    align-items: center;
+    margin-top: 18px;
+    grid-gap: 0 16px;
+}
+.footer .social-item {
+    cursor: pointer;
+}
+.footer .social-item__img {
+    width: 36px;
+    height: 36px;
+}
+.footer .down-app {
+    margin-top: 18px;
+    display: flex;
+    align-items: center;
+    grid-gap: 0 12px;
+}
+.footer .down-app__qr {
+    width: 40%;
+    background-color: #fff;
+}
+
+.footer .down-app__qr img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.footer .down-app__wrap {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 12px 0;
+}
+.footer .down-app__btn {
+    cursor: pointer;
+}
+.footer .down-app__btn img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /* Mobile */
 @media only screen and (max-width: 769px) {
-      .footer{
-            display: none;
-      }
-      .footer-cnt{
-            flex-direction: column;
-            padding: 24px 0px;
-      }
-      .footer-cnt__item-title {
-            width: 100%;
-            text-align: center;
-            margin-top: 12px;
-      }
-      .footer-cnt .wrap{
-            width: 100%;
-      }
-      .footer-cnt__item ul{
-            margin-top: 12px;
-      }
-      .footer-cnt__item ul li {
-            text-align: center;
-      }
+    .footer {
+        display: none;
+    }
+    .footer-cnt {
+        flex-direction: column;
+        padding: 24px 0px;
+    }
+    .footer-cnt__item-title {
+        width: 100%;
+        text-align: center;
+        margin-top: 12px;
+    }
+    .footer-cnt .wrap {
+        width: 100%;
+    }
+    .footer-cnt__item ul {
+        margin-top: 12px;
+    }
+    .footer-cnt__item ul li {
+        text-align: center;
+    }
 }
