--- a/src/features/MerchantDetail/components/OrgMap/orgMap.css
+++ b/src/features/MerchantDetail/components/OrgMap/orgMap.css
@@ -112,6 +112,7 @@
 .dialog-map__org .evaluate-item {
     display: flex;
     grid-gap: 0 4px;
+    align-items: center;
 }
 .dialog-map__item .map-item__content {
     width: 100%;
@@ -122,8 +123,8 @@
     height: 100%;
 }
 .dialog-map__org .evaluate-item img {
-    width: 20px;
-    height: 20px;
+    width: 14px;
+    height: 14px;
 }
 .dialog-map__org .evaluate-item p {
     font-size: 14px;
@@ -249,26 +250,30 @@
         flex-direction: column;
         gap: 4px 0;
     }
-    .map-item__mobile .item-content__name p {
-        font-size: 14px;
-        font-weight: bold;
+    .map-item__mobile .item-content__name {
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
         word-break: break-word;
-        height: 36px;
+    }
+    .map-item__mobile .item-content__name p {
+        font-size: 14px;
+        font-weight: bold;
+    }
+    .map-list__mobile .item-content__address {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
     }
     .map-list__mobile .item-content__address p {
         font-size: 12px;
         font-weight: bold;
         color: #8c8c8c;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        word-break: break-word;
     }
     .map-list__mobile .item-content__evaluate {
         display: flex;
