--- a/src/features/Cart/cart.css
+++ b/src/features/Cart/cart.css
@@ -206,33 +206,34 @@
 .cart-dialog_org-list {
     box-shadow: none;
 }
-.card-read-more{
-  display: flex;
-  justify-content: center;
+.card-read-more {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.card-read-more:hover .read-more>img{
-  transform: translateX(5px);
+.card-read-more:hover .read-more > img {
+    transform: translateX(5px);
 }
-.card-read-more .read-more{
-  margin-top: 45%;
-  display: flex;
-  height: -moz-fit-content;
-  height: fit-content;
-  align-items: flex-end;
-  transition: all .2s ease-in-out;
-  font-weight: bold;  
-  font-size: 16px;
-  line-height: 1.5;
-  cursor: pointer;
+.card-read-more .read-more {
+    display: flex;
+    height: -moz-fit-content;
+    height: fit-content;
+    align-items: flex-end;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.5;
+    cursor: pointer;
+    color: var(--purple);
 }
-.card-read-more .read-more>img{
-  width: 20px;
-  margin-left: 5px;
-  border: solid 1px var(--text-hover);
-  outline: none;
-  transition: all .3s ease-in-out;
-  border-radius: 100%;
-  background-color: var(--bgWhite);
+.card-read-more .read-more > img {
+    width: 20px;
+    margin-left: 5px;
+    border: solid 1px var(--text-hover);
+    outline: none;
+    transition: all 0.3s ease-in-out;
+    border-radius: 100%;
+    background-color: var(--bgWhite);
 }
 .css-1t1j96h-MuiPaper-root-MuiDialog-paper {
     background-color: transparent !important;
