--- a/src/features/Homev2/home-se.css
+++ b/src/features/Homev2/home-se.css
@@ -1,4 +1,4 @@
-.home-se-cnt{
+.home-se-cnt {
     margin: 28px 0px;
 }
 .ser-promo__bot {
@@ -51,7 +51,7 @@
     padding: 4px 0px;
     transition: all 0.3s;
     border-radius: 12px;
-    box-shadow: 0px 6px 15px #dcd8ee;
+    /* box-shadow: 0px 6px 15px #dcd8ee; */
 }
 .home-tags .tag-item-cnt:hover {
     box-shadow: 0px 10px 31px rgba(76, 62, 142, 0.3);
@@ -68,7 +68,7 @@
     color: var(--text-black);
 }
 /* home promo */
-.home-se-promo{
+.home-se-promo {
     margin: 28px 0px;
 }
 .home-promo-ser .ser-list {
@@ -99,7 +99,6 @@
     cursor: pointer;
     overflow: hidden;
     border-radius: 12px;
-
 }
 .deal-first img,
 .home-deal-cnt .deal-second__item img {
@@ -197,7 +196,7 @@
 .home-province .home-province_item:hover {
     box-shadow: 0px 10px 31px rgba(76, 62, 142, 0.3);
 }
-.home-province .home-province_item:hover img{
+.home-province .home-province_item:hover img {
     transform: scale(1.1);
 }
 .home-province .province-item-cnt {
@@ -226,7 +225,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: all .36s ease-in-out;
+    transition: all 0.36s ease-in-out;
 }
 .home-province .home-province_item:nth-child(1) {
     grid-column: 1/3;
@@ -275,7 +274,7 @@
         margin: 0;
         width: unset;
     }
-    .home-cate-tree-cnt{
+    .home-cate-tree-cnt {
         display: none;
     }
 
