[UPDATE] fix comment image

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     --text-black: #3b3a40;
     --text-hover: #a2a1ab;
     --text-op: #cac4e5;
+    --text-orange: #FF721F;
     --bg-color: #eeedf2;
     --pink: #fff3f1;
     --pink-2: #fbf3f7;
