--- a/src/features/Feed/Videos/style.css
+++ b/src/features/Feed/Videos/style.css
@@ -144,6 +144,7 @@
     font-weight: 700;
     font-size: 10px;
     line-height: 12px;
+    color: var(--text-orange)
 }
 .video-item_product_item-special_price{
     font-family: 'Nunito';
