--- a/src/features/Home/components/slider.css
+++ b/src/features/Home/components/slider.css
@@ -60,7 +60,7 @@
 .slick-dots li button:before {
     display: none;
 }
-.homelogged-foryou .slick-slide {
+.slick-slide {
     padding: 0 16px;
     margin-top: 48px;
     margin-bottom: 28px;
